# iot-control

./: README.md
client/native/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  session.cpp  session.h
client/native/constants/: message_type.h
client/native/demo/60주년기념관강의실/: iot-client  log.txt
client/native/demo/60주년기념관중앙,랩실/: iot-client  log.txt
client/native/demo/서울캠/: iot-client  log.txt
client/native/devices/: DeviceEntry.cpp  DeviceEntry.h
client/native/tools/: datatype.h
server/: log.txt  run-all.py  run.py
server/native/: CMakeLists.txt  ipc.cpp  main.cpp  manager.cpp  manager.h  session.cpp  session.h
server/native/constants/: device_type.h  message_type.h  server_constants.h
server/native/database/: DevRepository.cpp  DevRepository.h
server/native/devices/: DeviceBuilder.cpp  DeviceBuilder.h  DeviceEntry.cpp  DeviceEntry.h
server/native/tools/: datatype.cpp  logger.cpp  logger.h
server/web/ipc/: ipc.py
